--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.1"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
