--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
   "author": "heart <7362469@qq.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.16.7",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.0.3",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^16.2.4",
+    "commitlint": "^16.2.4",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   }
 }
